// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the titlebar correctly 1`] = `
<div
  className="issue-row"
>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
  <div
    className="issue-row-meta"
  >
    <ul
      className="issue-meta-list"
    >
      <li
        className="issue-meta"
      >
        <IssueChangelog
          creationDate="2017-03-01T09:36:01+0100"
          isOpen={false}
          issue={
            Object {
              "actions": Array [],
              "component": "main.js",
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [],
              "fromHotspot": false,
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "projectOrganization": "org",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": Array [],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": Array [],
              "type": "BUG",
            }
          }
          togglePopup={[MockFunction]}
        />
      </li>
      <li
        className="issue-meta"
      >
        <span
          className="issue-meta-label"
          title="line_number"
        >
          L
          26
        </span>
      </li>
      <li
        className="issue-meta"
      >
        <Link
          className="js-issue-permalink link-no-underline"
          onlyActiveOnIndex={false}
          style={Object {}}
          target="_blank"
          title="permalink"
          to={
            Object {
              "pathname": "/project/issues",
              "query": Object {
                "branch": "feature-1.0",
                "id": "myproject",
                "issues": "AVsae-CQS-9G3txfbFN2",
                "open": "AVsae-CQS-9G3txfbFN2",
                "types": undefined,
              },
            }
          }
        >
          <LinkIcon />
        </Link>
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render the titlebar with the filter 1`] = `
<div
  className="issue-row"
>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
  <div
    className="issue-row-meta"
  >
    <ul
      className="issue-meta-list"
    >
      <li
        className="issue-meta"
      >
        <IssueChangelog
          creationDate="2017-03-01T09:36:01+0100"
          isOpen={false}
          issue={
            Object {
              "actions": Array [],
              "component": "main.js",
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [],
              "fromHotspot": false,
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "projectOrganization": "org",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": Array [],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": Array [],
              "type": "BUG",
            }
          }
          togglePopup={[MockFunction]}
        />
      </li>
      <li
        className="issue-meta"
      >
        <span
          className="issue-meta-label"
          title="line_number"
        >
          L
          26
        </span>
      </li>
      <li
        className="issue-meta"
      >
        <Link
          className="js-issue-permalink link-no-underline"
          onlyActiveOnIndex={false}
          style={Object {}}
          target="_blank"
          title="permalink"
          to={
            Object {
              "pathname": "/project/issues",
              "query": Object {
                "id": "myproject",
                "issues": "AVsae-CQS-9G3txfbFN2",
                "open": "AVsae-CQS-9G3txfbFN2",
                "types": undefined,
              },
            }
          }
        >
          <LinkIcon />
        </Link>
      </li>
      <li
        className="issue-meta"
      >
        <SimilarIssuesFilter
          isOpen={false}
          issue={
            Object {
              "actions": Array [],
              "component": "main.js",
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [],
              "fromHotspot": false,
              "key": "AVsae-CQS-9G3txfbFN2",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "projectOrganization": "org",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": Array [],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": Array [],
              "type": "BUG",
            }
          }
          onFilter={[MockFunction]}
          togglePopup={[MockFunction]}
        />
      </li>
    </ul>
  </div>
</div>
`;
